[PlayStation] WTFCrash should preserve register state. https://bugs.webkit.org/show_bug.cgi?id=197932

Reviewed by Don Olmstead.

* wtf/Assertions.cpp:
* wtf/Assertions.h:
Let r196397 apply to PlayStation port as well.


Canonical link: https://commits.webkit.org/212062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245369 268f45cc-cd09-0410-ab3c-d52691b4dbfc